chore: move `DelicateElideApi` to `core`
Signed-off-by: Sam Gammon <sam@elide.dev>